<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2009 Gopalkrishna Sharma.
Email: gopalkri@umich.edu / gopalkrishnaps@gmail.com

This file is part of WakeUp!.

Wake Up! is free software: you can redistribute it and/or modify
it under the terms of the Lesser GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Wake Up! is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
Lesser GNU General Public License for more details.

You should have received a copy of the Lesser GNU General Public License
along with Wake Up!.  If not, see <http://www.gnu.org/licenses/>.
-->


<resources>
    <string name="app_name">Wake Up!</string>

    <string name="home_title">Home</string>
    <string name="home_set_existing_alarm">Set Existing Alarm:</string>
    <string name="home_existing_alarm_spinner_prompt">Choose An Existing Alarm</string>
    <string name="home_done">Set</string>
    <string name="home_create_new_alarm">Create New Alarm</string>
    <string name="home_manage_existing_alarms">Manage Exising Alarms</string>
    <string name="home_no_alarms_exist">No Alarms Exist</string>
    <string name="home_settings">Notification Settings</string>
    <string name="home_help">Help</string>

    <string name="help_text">Instructions:\n\nUse the Home Screen to set an alarm. You can either select an alarm you have already specified, or create a new one. To set an existing alarm, select it from the spinner and hit Done. To create a new alarm, hit Create New Alarm. This will pop up the Create Alarm screen. Enter the name, radius and units of measurement for the radius. You now have to pick the destination. You can do this in one of two ways. First, you can pick the destination on the map. To do this hit Pick From Map. That will pop up a map allowing you to select a point by touching the screen. A marker will be drawn on the point you choose. If you make a mistake, just correct it by tapping on another point. The old one will disappear. The second way to specify is to specify a street address. Wake Up! will evaluate the street address using Google Maps, and if it is unable to resolve it correctly, you will notified and asked to enter a new address.\n\nAbout:\n\nWakeUp! was written by Gopalkrishna Sharma. Email: gopalkri@umich.edu .For more information, visit the WakeUp website at: http://github.com/gps/wakeup/tree/master</string>

    <string name="edit_alarm_alarm_name">Alarm Name</string>
    <string name="edit_alarm_enter_radius">Enter proximity radius for destination:</string>
    <string name="edit_alarm_pick_from_map">Pick Destination From Map</string>
    <string name="edit_alarm_view_on_map">View Destination On Map</string>
    <string name="edit_alarm_or">Or</string>
    <string name="edit_alarm_search_address">Enter Address To Search For:</string>
    <string name="edit_alarm_search_btn">Search</string>
	<string name="edit_alarm_save">Save</string>
    <string name="edit_alarm_units_spinner_prompt">Pick Unit of Measurement For Proximity Radius</string>

    <string name="select_destination_done">Done</string>
    <string name="select_destination_instructions">Instructions</string>

    <string name="manage_alarms_delete_alarm">Delete</string>

    <string name="receive_notification_home">Go To Home Screen"</string>

	<string name="edit_settings_sound">Play Notification Sound</string>
	<string name="edit_settings_vibrate">Vibrate</string>
	<string name="edit_settings_led">Flash LED</string>

</resources>
