<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:gravity="center_horizontal"
        android:textSize="20pt"
        android:paddingBottom="5dip" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_set_existing_alarm"
        android:textSize="10pt" />

    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Spinner android:id="@+id/home_existing_alarms_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:prompt="@string/home_existing_alarm_spinner_prompt"/>

        <Button android:id="@+id/home_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_existing_alarms_spinner"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dip"
            android:text="@string/home_done"
            android:textSize="8pt"/>

    </RelativeLayout>

    <Button android:id="@+id/home_create_new_alarm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/home_create_new_alarm"
        android:textSize="8pt" />

    <Button android:id="@+id/home_manage_existing_alarms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/home_manage_existing_alarms"
        android:textSize="8pt" />

</LinearLayout>
