<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:gravity="center_horizontal"
        android:textSize="20pt"
        android:paddingBottom="5dip" />

    <TextView android:id="@+id/home_no_alarms_exist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/home_no_alarms_exist"
        android:textSize="8pt" />

    <Button android:id="@+id/home_no_alarms_create_new_alarm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/home_create_new_alarm"
        android:textSize="8pt" />

</LinearLayout>
