<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2009 Gopalkrishna Sharma.
Email: gopalkri@umich.edu / gopalkrishnaps@gmail.com

This file is part of WakeUp!.

Wake Up! is free software: you can redistribute it and/or modify
it under the terms of the Lesser GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Wake Up! is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
Lesser GNU General Public License for more details.

You should have received a copy of the Lesser GNU General Public License
along with Wake Up!.  If not, see <http://www.gnu.org/licenses/>.
-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

	        <TextView android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/home_title"
		        android:gravity="center_horizontal"
		        android:textSize="20pt"
		        android:paddingBottom="5dip" />

	        <TextView android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/home_set_existing_alarm"
	            android:textSize="10pt" />

	        <RelativeLayout android:layout_width="fill_parent"
	            android:layout_height="wrap_content" >

	            <Spinner android:id="@+id/home_existing_alarms_spinner"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:drawSelectorOnTop="true"
	                android:prompt="@string/home_existing_alarm_spinner_prompt"/>

	            <Button android:id="@+id/home_done"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_below="@id/home_existing_alarms_spinner"
	                android:layout_alignParentRight="true"
	                android:layout_marginLeft="10dip"
	                android:text="@string/home_done"
	                android:textSize="8pt"/>

	        </RelativeLayout>

	        <Button android:id="@+id/home_manage_existing_alarms"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal|center_vertical"
	            android:text="@string/home_manage_existing_alarms"
	            android:textSize="8pt" />

	        <Button android:id="@+id/home_with_alarms_create_new_alarm"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_horizontal|center_vertical"
		        android:text="@string/home_create_new_alarm"
		        android:textSize="8pt" />

	    </LinearLayout>

    </ScrollView>

</LinearLayout>
