<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2009 Gopalkrishna Sharma.
Email: gopalkri@umich.edu / gopalkrishnaps@gmail.com

This file is part of WakeUp!.

Foobar is free software: you can redistribute it and/or modify
it under the terms of the Lesser GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Foobar is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
Lesser GNU General Public License for more details.

You should have received a copy of the Lesser GNU General Public License
along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView android:text="@string/edit_alarm_alarm_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText android:id="@+id/edit_alarm_alarm_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView android:text="@string/edit_alarm_enter_radius"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText android:id="@+id/edit_alarm_radius"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner android:id="@+id/edit_alarm_units_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
					android:drawSelectorOnTop="true"
 					android:prompt="@string/edit_alarm_units_spinner_prompt" />

            </LinearLayout>

            <Button android:id="@+id/edit_alarm_pick_from_map"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
          
            <LinearLayout android:orientation="vertical"
                android:id="@+id/edit_alarm_search_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

				<TextView android:text="@string/edit_alarm_or"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" />

                <TextView android:text="@string/edit_alarm_search_address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

				<RelativeLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content" >

	                <EditText android:id="@+id/edit_alarm_address_search"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content" />

					<Button android:id="@+id/edit_alarm_search_btn"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@id/edit_alarm_address_search"
						android:layout_alignParentRight="true"
		                android:layout_marginLeft="10dip"
						android:text="@string/edit_alarm_search_btn" />
				
				</RelativeLayout>

            </LinearLayout>

			<Button android:id="@+id/edit_alarm_save"
				android:text="@string/edit_alarm_save"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
