<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2009 Gopalkrishna Sharma.
Email: gopalkri@umich.edu / gopalkrishnaps@gmail.com

This file is part of WakeUp!.

Foobar is free software: you can redistribute it and/or modify
it under the terms of the Lesser GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Foobar is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
Lesser GNU General Public License for more details.

You should have received a copy of the Lesser GNU General Public License
along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" >

			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" >

				<TextView android:text="@string/edit_settings_sound"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="left" />

				<CheckBox android:id="@+id/edit_settings_sound_checkbox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="left" />

			</LinearLayout>

			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" >

				<TextView android:text="@string/edit_settings_vibrate"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="left" />

				<CheckBox android:id="@+id/edit_settings_vibrate_checkbox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="left" />

			</LinearLayout>

			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" >

				<TextView android:text="@string/edit_settings_led"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="left" />

				<CheckBox android:id="@+id/edit_settings_led_checkbox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="left" />

			</LinearLayout>

		</LinearLayout>

    </ScrollView>

</LinearLayout>
